<resources>
    <string name="app_name">OnlineShopping</string>
    //IT19352572
    app_slogan
    <string name="main_join_now_btn">Join Now</string>
    <string name="main_login_btn"> Already have an Account? Login</string>
    <string name="login_phone_number_input">Phone Number</string>
    <string name="login_password_input">Password</string>
    <string name="remember_me_chkb">Remember me</string>
    <string name="login_btn">Login</string>
    <string name="app_slogan">DREAM MART</string>
    <string name="admin_panel_link">I am an Admin?</string>
    <string name="close_settings_btn">Close</string>
    <string name="update_account_settings_btn">Update</string>
    <string name="profile_image_change_btn">Change Profile</string>
    <string name="profile_phone_number">Phone Number...</string>
    <string name="profile_user_name">User Name...</string>
    <string name="profile_password">Password...</string>
    <string name="delete_profile_btn">Delete</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="changeprofile">Change Profile</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="cntnumber">Contact Number...</string>
    <string name="prductname">Product Name...</string>
    <string name="prduct_description">Product Description...</string>
    <string name="prductprice">Product Price...</string>
    <string name="addprudct">Add Product</string>
    <string name="addnewprduct">Add New Product</string>
    <string name="checkneworders">Check New Orders</string>
    <string name="logoutbtn">Logout</string>
    <string name="neworderheading">New Orders</string>
    <string name="productheading">Products</string>
    <string name="totalprice">Total Price</string>
    <string name="nextbtn">Next</string>
    <string name="enteryourphonenumber">Phone Number</string>
    <string name="enterhomeaddress">Address</string>
    <string name="enteryourcity">District</string>
    <string name="confirmtheshippment">Confirm</string>
    <string name="enterthename">Name</string>
    <string name="enterthephonenumber">Phone Number</string>
    <string name="inputnewpassword">Password</string>
    <string name="createaccountbtn">Create Account</string>
    <string name="typeproductname">Product Name</string>
    <string name="searchbtn">Search</string>
    <string name="closebtn">Close</string>
    <string name="updateyourprofile">Update</string>
    <string name="enterphone">Phone Number...</string>
    <string name="enteraddress">Address...</string>
    <string name="username">user name</string>
    <string name="productname">Product Name</string>
    <string name="productprice">Product Price</string>
    <string name="productdescription">Product Description</string>
    <string name="showneworders">Show User Order Product</string>
    <string name="dreammart">Dream Mart</string>
    <string name="PostaName">Postal Name</string>
    <string name="phonenumber">Phone Number...</string>
    <string name="address">Address...</string>
    <string name="headeing">Please write your Delivery Details</string>
    <string name="hdng">Please Enter Your Residential Details</string>


</resources>