<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abc"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="217dp"
        android:layout_height="161dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-13dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="-29dp"
        android:layout_marginBottom="437dp"
        android:layout_toStartOf="@+id/app_slogan"
        android:src="@drawable/logo3" />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="256dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="-26dp"
        android:text="@string/dreammart"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_background"
        android:textSize="32sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/login_phone_number_input"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="319dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/login_phone_number_input"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textSize="19sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_phone_number_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/login_password_input"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textSize="19sp"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/login_password_input"
        android:layout_marginTop="5dp"
        >

        <com.rey.material.widget.CheckBox
            android:id="@+id/remember_me_chkb"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:gravity="center_vertical"
            android:text="@string/remember_me_chkb"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cbd_strokeColor="@android:color/holo_green_light" />

    </LinearLayout>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="19dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/holo_green_light"
        android:padding="5dp"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="23dp"
        android:text="@string/admin_panel_link"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="80dp"
        android:text="I'm not an Admin?"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout>