<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backll"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_applogo"
        android:layout_width="322dp"
        android:layout_height="159dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="536dp"
        android:padding="5dp"
        android:src="@drawable/logo3" />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="227dp"
        android:layout_height="74dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="238dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="418dp"
        android:text="@string/app_slogan"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_background"
        android:textSize="33sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="371dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/enterthename"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/cardview_light_background"

        android:textColorHint="@color/cardview_light_background"
        android:textSize="19sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_username_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/enterthephonenumber"
        android:inputType="phone"
        android:padding="20dp"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        android:textSize="19sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_phone_number_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/inputnewpassword"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        android:textSize="19sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:text="@string/createaccountbtn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>