<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_one"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/close_settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="Close"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/update_account_settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp"
                    android:text="Update"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/hdng"

        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        android:textColorHint="#F81E1D1D"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/postal_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="252dp"

        android:layout_marginRight="20dp"
        android:hint="@string/PostaName"
        android:textColorHint="@color/cardview_dark_background" />

    <EditText
        android:id="@+id/settings_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postal_name"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"

        android:layout_marginTop="343dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/phonenumber"
        android:inputType="number"
        android:maxLength="10"
        android:padding="10dp"
        android:textColorHint="@color/cardview_dark_background" />

    <EditText
        android:id="@+id/settings_address"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_phone_number"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/address"
        android:padding="10dp"
        android:textColorHint="@color/cardview_dark_background" />

    <EditText
        android:id="@+id/shippment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settings_phone_number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        android:layout_marginBottom="298dp"
        android:hint="Name of the reciever"
        android:textColorHint="@color/colorText" />
</RelativeLayout>